   or development hosts. 
 - NPG_TEST_TRACKING_CONFIGPATH environment variable can be used to set a
   custom location of the Clearpress configuration file for unit tests.
   The default location of the file, data/config.ini, is used if the
   variable is unset. 
 - Move README file to README.md, improve Markdown format. Add sections
   describing environment variables and tags.

release 91.13.0
 - Extend npg_status2file script to optionally save statuses to the tracking
   database and renamed the script to npg_status_save.
 - Move from Travis CI to GitHub Actions.
 - metaref_repository attribute is added to the reference repository API

release 91.12.0
 - Change instrument and instrument format pages to only show current
   instruments and instrument formats
 - Remove superfluous columns in display tables for lists of instruments
   and instrument formats
 - Remove unused views (templates) for an instrument manufacturer
 - Remove manufacturer model and view classes, create manufacturer_name
   method in the instrument and instrument_format model classes

release 91.11.0
 - a partial reimplementation of the serialization framework for components
   and compositions in order to speed-up frequently used methods 
 - add geno files to disabled access list in http_sfweb.conf
 - cookie decryption - use an up-to-date Crypt::CBC API and algorithm
 - reduce the sleep type of the status daemon from 60 to 1 sec in order to
   reduce the time it takes to loop over the run folders on lustre 

release 91.10.0
 - script npg_samplesheet4MiSeq is removed this utility has been moved
   to a different git package; the samplesheet daemon stays in this
   package till all MiSeq instruments are redirected off old staging servers 

release 91.9.0
 - Change label 'New Instrument Mod' to 'New Instrument Upgrade' on the Admin page
 - Remove 'New Instrument Status' and 'New Run Status' options from Admin page
 - Sort the dropdown menu of instruments on the 'New Run' page